--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'  
-  
 services:  
   app:  
     build:  
@@ -7,18 +5,18 @@ services:
       dockerfile: Dockerfile  
     volumes:  
       - ./suitecrm:/workspace:cached  
-      - ./suitecrm/node_modules:/workspace/node_modules  
-      - ./suitecrm/vendor:/workspace/vendor  
+      - ./devcontainer/scripts:/workspace/scripts  
     environment:  
       - NODE_ENV=development  
       - APP_ENV=dev  
-      - DATABASE_URL=mysql://suitecrm:suitecrm@db:3306/suitecrm  
+      - DATABASE_URL=mysql://suitecrm:suitecrm@host.docker.internal:3306/suitecrm
     depends_on:  
       - db  
     ports:  
       - "8080:8080"  
       - "4200:4200"  
       - "3000:3000"  
+      - "5000:5000"  
     command: sleep infinity  
   
   db:  
